Comenzar render de datos de firebase a vista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CafeteriaUDB</string>
+    <string name="nombre_plato">Nombre plato</string>
+    <string name="descripcion_plato">Descripción plato</string>
+    <string name="precio_plato">Precio plato</string>
 </resources>
